Added app core, login, logout, registration

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Craft-Market - Handmade Online Store</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
-<body>
 
+<body>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+            <img src="logo.png" alt="Logo">
+        </a>
+
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item" href="{% url 'core:index' %}">
+                Home
+            </a>
+
+            <a class="navbar-item" href="/catalog">
+                Catalog
+            </a>
+
+            <a class="navbar-item" href="/about">
+                About
+            </a>
+
+            <a class="navbar-item" href="/gallery">
+                Gallery
+            </a>
+
+            <a class="navbar-item" href="/search">
+                Search
+            </a>
+
+            <a class="navbar-item" href="/payment">
+                Payment & Delivery
+            </a>
+
+            <a class="navbar-item" href="/contacts">
+                Contacts
+            </a>
+        </div>
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="buttons">
+                    {% if user.is_authenticated %}
+                    <a class="button is-primary" href="/profile">
+                        <strong>Profile</strong>
+                    </a>
+                    <a class="button is-light" href="{% url 'core:logout' %}">
+                        Log out
+                    </a>
+                    {% else %}
+                    <a class="button is-primary" href="{% url 'core:registration' %}">
+                        <strong>Sign up</strong>
+                    </a>
+                    <a class="button is-light" href="{% url 'core:login' %}">
+                        Log in
+                    </a>
+                    {% endif %}
+                    <a class="button is-light" href="/cart">
+                        Cart
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<section class="hero is-primary">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title">Welcome to Craft-Market</h1>
+            <h2 class="subtitle">Discover unique handmade items</h2>
+        </div>
+    </div>
+</section>
+
+{% block content %}
+<section class="section">
+    <div class="container">
+        <!-- Content Goes Here -->
+    </div>
+</section>
+{% endblock %}
+
+<footer class="footer">
+    <div class="content has-text-centered">
+        <p>
+            Craft-Market - Handmade Online Store - 2023.
+        </p>
+    </div>
+</footer>
 </body>
+
 </html>
