Added changes in model product

--- a/src/templates/craft/products_list.html
+++ b/src/templates/craft/products_list.html
@@ -19,8 +19,8 @@
                 <div class="column is-one-third">
                     <div class="card">
                         <div class="card-image">
-                            <figure class="image is-4by3">
-                                <img src="{{ product.image }}">
+                            <figure class="image is-uncropped">
+                                <img src="/media/{{ product.image }}">
                             </figure>
                         </div>
                         <div class="card-content">
