--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="/">
-            <img src="{% static 'logo.jpg' %}" alt="Logo">
+            <img src="{% static 'logo.jpg' %}" alt="Logo" style="border-radius: 50%;">
         </a>
 
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
