--- a/src/templates/registration/registration.html
+++ b/src/templates/registration/registration.html
@@ -4,7 +4,6 @@
 
 <html>
 <head>
-    <title>Registration</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
 </head>
 <body>
@@ -12,7 +11,7 @@
         <div class="container">
             <div class="columns is-centered">
                 <div class="column is-half">
-                    <h1 class="title has-text-centered">Login</h1>
+                    <h1 class="title has-text-centered">Registration</h1>
                     <form method="post" class="has-text-centered">
                         {% csrf_token %}
                         <div class="field">
