--- a/src/templates/craft/product_detail.html
+++ b/src/templates/craft/product_detail.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load static %}
 
 {% block content %}
 <div class="container">
@@ -7,7 +8,11 @@
       <h1 class="title">{{ product.name }}</h1>
       <p>{{ product.description }}</p>
       <p>Price: {{ product.price }}</p>
+      {% if product.image %}
       <img src="{{ product.image.url }}" alt="Product Image">
+      {% else %}
+      <img src="{% static 'gift_1.jpg' %}" alt="Product Image">
+      {% endif %}
     </div>
     <div class="column is-6">
       <p>Category: {{ product.category.name }}</p>
