--- a/src/templates/craft/products_list.html
+++ b/src/templates/craft/products_list.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load static %}
 
 {% block content %}
 
@@ -20,7 +21,11 @@
                     <div class="card">
                         <div class="card-image">
                             <figure class="image is-uncropped">
-                                <img src="/media/{{ product.image }}">
+                                {% if product.image %}
+                                <img src="{{ product.image.url }}" alt="Product Image">
+                                {% else %}
+                                <img src="{% static 'gift_1.jpg' %}" alt="Product Image">
+                                {% endif %}
                             </figure>
                         </div>
                         <div class="card-content">
