--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -1,41 +1,26 @@
 {% extends "index.html" %}
 
 {% block content %}
-<html>
-<head>
-    <title>Login</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
-</head>
-<body>
-    <section class="section">
-        <div class="container">
-            <div class="columns is-centered">
-                <div class="column is-half">
-                    <h1 class="title has-text-centered">Login</h1>
-                    <form method="post" class="has-text-centered">
-                        {% csrf_token %}
-                        <div class="field">
-                            <label class="label">Email</label>
-                            <div class="control">
-                                <input class="input" type="email" name="{{ form.email.html_name }}" value="{{ form.email.value }}">
+<section class="section mt-5">
+    <div class="container">
+        <div class="columns is-centered">
+            <div class="column is-one-third">
+                <div class="card">
+                    <div class="card-content">
+                        <h1 class="title has-text-centered">Login</h1>
+                        <form method="POST">
+                            {% csrf_token %}
+                            {{ form }}
+                            <div class="field is-grouped is-grouped-centered mt-3">
+                                <div class="control">
+                                    <button type="submit" class="button is-primary">Login</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="field">
-                            <label class="label">Password</label>
-                            <div class="control">
-                                <input class="input" type="password" name="{{ form.password.html_name }}">
-                            </div>
-                        </div>
-                        <div class="field">
-                            <div class="control has-text-centered">
-                                <input type="submit" value="Login" class="button is-primary">
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-</body>
-</html>
+    </div>
+</section>
 {% endblock %}
