Added changes in templates

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -77,7 +77,7 @@
                         Log in
                     </a>
                     {% endif %}
-                    <a class="button is-light" href="#">
+                    <a class="button is-light" href="{% url 'craft:order' %}">
                         Cart
                     </a>
                 </div>
