--- a/src/templates/craft/order.html
+++ b/src/templates/craft/order.html
@@ -6,21 +6,29 @@
     <div class="container">
       <h1 class="title">Order Details</h1>
       <div class="box">
-        <p><strong>Order ID:</strong> {{ order.id }}</p>
-        <p><strong>Name:</strong> {{ order.name }}</p>
+        <p><strong>Order number:</strong> {{ order.name }}</p>
         <p><strong>User:</strong> {{ order.user }}</p>
         <p><strong>Status:</strong> {{ order.status }}</p>
         <p><strong>Quantity:</strong> {{ order.quantity }}</p>
         <p><strong>Products:</strong></p>
         <ul>
           {% for product in order.product.all %}
-            <li>{{ product.name }} - {{ product.price }}</li>
+            <li>
+              {{ product.name }} - {{ product.price }}
+              <form method="post" action="{% url 'craft:order' %}">
+                {% csrf_token %}
+                <input type="hidden" name="product_id" value="{{ product.id }}">
+                <button type="submit" class="button is-danger">Remove</button>
+              </form>
+            </li>
           {% empty %}
             <li>No products</li>
           {% endfor %}
         </ul>
+        <p><strong>Total:</strong> {{ total }}</p>
       </div>
-       <a href="#" class="button is-primary">Checkout</a>
+      <a href="#" class="button is-primary">Checkout</a>
     </div>
   </section>
 {% endblock %}
+
