--- a/src/templates/craft/empty_order.html
+++ b/src/templates/craft/empty_order.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "index.html" %}
 
-</body>
-</html>
+{% block content %}
+<section class="section">
+  <div class="container">
+    <h1 class="title">Empty Order</h1>
+    <p class="subtitle">{{ message }}</p>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item button is-primary" href="{% url 'craft:get_products' %}">Product List</a>
+          <a class="navbar-item button is-info" href="{% url 'craft:sale' %}">Sale</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+</section>
+{% endblock %}
