--- a/src/templates/craft/order.html
+++ b/src/templates/craft/order.html
@@ -6,7 +6,7 @@
     <div class="container">
       <h1 class="title">Order Details</h1>
       <div class="box">
-        <p><strong>Order number:</strong> {{ order.name }}</p>
+        <p><strong>Order number:</strong> {{ order.order_name }}</p>
         <p><strong>User:</strong> {{ order.user }}</p>
         <p><strong>Status:</strong> {{ order.status }}</p>
         <p><strong>Quantity:</strong> {{ order.quantity }}</p>
@@ -27,8 +27,9 @@
         </ul>
         <p><strong>Total:</strong> {{ total }}</p>
       </div>
-      <a href="#" class="button is-primary">Checkout</a>
+      <a href="{% url 'craft:checkout' %}" class="button is-primary">Checkout</a>
+      <a href="{% url 'craft:get_products' %}" class="button is-primary">Back to Product List</a>
+      <a href="{% url 'craft:sale' %}" class="button is-primary">Back to Sale</a>
     </div>
   </section>
 {% endblock %}
-
