--- a/src/templates/craft/cart.html
+++ b/src/templates/craft/cart.html
@@ -6,31 +6,40 @@
         <h1 class="title">Shopping Cart</h1>
         <table class="table is-striped is-fullwidth">
             <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th>Actions</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
-                </tr>
+            <tr>
+                <th>Product</th>
+                <th>Price</th>
+                <th>Details</th>
+                <th>Actions</th>
+                <th>Quantity</th>
+                <th>Total</th>
+            </tr>
             </thead>
             <tbody>
-                {% for item in cart_items %}
-                <tr>
-                    <td>{{ item.product.name }}</td>
-                    <td>{{ item.price }}</td>
-                    <td>
-                        <a href="{% url 'craft:delete_item' item.id %}" class="button is-danger is-outlined">
+            {% for item in cart_items %}
+            <tr>
+                <td>{{ item.product.name }}</td>
+                <td>{{ item.price }}</td>
+                <td>
+                    <a href="{% url 'craft:product_detail' item.product.id %}" class="button is-info is-outlined">
+                        <span class="icon is-small">
+                            <i class="fas fa-eye"></i>
+                        </span>
+                        <span>View Details</span>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'craft:delete_item' item.id %}" class="button is-danger is-outlined">
                             <span class="icon is-small">
                                 <i class="fas fa-trash-alt"></i>
                             </span>
-                            <span>Delete</span>
-                        </a>
-                    </td>
-                    <td>{{ item.quantity }}</td>
-                    <td>{{ item.price }}</td>
-                </tr>
-                {% endfor %}
+                        <span>Delete</span>
+                    </a>
+                </td>
+                <td>{{ item.quantity }}</td>
+                <td>{{ item.price }}</td>
+            </tr>
+            {% endfor %}
             </tbody>
         </table>
         <div class="columns is-vcentered">
