--- a/src/templates/craft/sale.html
+++ b/src/templates/craft/sale.html
@@ -7,7 +7,7 @@
         <h1 class="title">Products in sale</h1>
         <div class="columns">
             <div class="columns is-multiline">
-                {% for product in products_in_sale%}
+                {% for product in sale%}
                 <div class="column is-one-third">
                     <div class="card">
                         <div class="card-image">
