--- a/src/templates/craft/product_detail.html
+++ b/src/templates/craft/product_detail.html
@@ -8,6 +8,7 @@
             <h1 class="title">{{ product.name }}</h1>
             <p>{{ product.description }}</p>
             <p>Price: {{ product.price }}</p>
+            <p>Discount: {{ product.discount }}</p>
             {% if product.image %}
             <img src="{{ product.image.url }}" alt="Product Image">
             {% else %}
