--- a/src/templates/craft/product_detail.html
+++ b/src/templates/craft/product_detail.html
@@ -18,13 +18,22 @@
         <div class="column is-6">
             <p>Category: {{ product.category.name }}</p>
             <p>Brand: {{ product.brand.name }}</p>
+            {% if product.in_stock %}
+            <p>In stock</p>
+            {% else %}
+            <p>Sold out</p>
+            {% endif %}
             <p>Quantity: {{ product.quantity }}</p>
 
             <form method="post" action="{% url 'craft:add_to_cart' product_id=product.id %}">
                 {% csrf_token %}
                 <input type="hidden" name="product" value="{{ product.pk }}">
                 <input type="hidden" name="quantity" value="1">
+                {% if not product.in_stock %}
+                <input type="submit" value="Out of stock" disabled>
+                {% else %}
                 <input type="submit" value="Add to Cart">
+                {% endif %}
             </form>
 
             <a class="button is-primary" href="{% url 'craft:get_products' %}">Back to Products</a>
