--- a/src/templates/craft/products_list.html
+++ b/src/templates/craft/products_list.html
@@ -39,20 +39,28 @@
                             <p>{{ product.description }}</p>
                             <p>Price: {{ product.price }}</p>
                             <p>Discount: {{ product.discount }}</p>
-
+                            {% if product.in_stock %}
+                            <p>In stock</p>
+                            {% else %}
+                            <p>Sold out</p>
+                            {% endif %}
                             <a href="{% url 'craft:product_detail' product.id %}">Product details</a>
 
                             <form method="post" action="{% url 'craft:add_to_cart' product_id=product.id %}">
                                 {% csrf_token %}
                                 <input type="hidden" name="product" value="{{ product.pk }}">
                                 <input type="hidden" name="quantity" value="1">
+                                {% if not product.in_stock %}
+                                <input type="submit" value="Out of stock" disabled>
+                                {% else %}
                                 <input type="submit" value="Add to Cart">
+                                {% endif %}
                             </form>
 
                             <form method="post" action="{% url 'craft:add_to_favourites' product_id=product.id %}">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-primary">Add to Favourites</button>
-                                </form>
+                            </form>
                         </div>
                     </div>
                 </div>
