--- a/src/templates/craft/products_list.html
+++ b/src/templates/craft/products_list.html
@@ -39,7 +39,7 @@
                             <p>{{ product.description }}</p>
                             <p>Price: {{ product.price }}</p>
                             <p>Discount: {{ product.discount }}</p>
-                            {% if product.in_stock %}
+                            {% if product.quantity > 0 %}
                             <p>In stock</p>
                             {% else %}
                             <p>Sold out</p>
@@ -50,7 +50,7 @@
                                 {% csrf_token %}
                                 <input type="hidden" name="product" value="{{ product.pk }}">
                                 <input type="hidden" name="quantity" value="1">
-                                {% if not product.in_stock %}
+                                {% if product.quantity == 0 %}
                                 <input type="submit" value="Out of stock" disabled>
                                 {% else %}
                                 <input type="submit" value="Add to Cart">
