--- a/src/templates/craft/sale.html
+++ b/src/templates/craft/sale.html
@@ -25,7 +25,7 @@
                                 <p>Price: {{ product.price }}</p>
                                 <p>Discount: {{ product.discount }}%</p>
                                 <p>New price: {{ product.price_with_discount }}</p>
-                                {% if product.in_stock %}
+                                {% if product.quantity > 0  %}
                                 <p>In stock</p>
                                 {% else %}
                                 <p>Sold out</p>
@@ -35,7 +35,7 @@
                                     {% csrf_token %}
                                     <input type="hidden" name="product" value="{{ product.pk }}">
                                     <input type="hidden" name="quantity" value="1">
-                                    {% if not product.in_stock %}
+                                    {% if product.quantity == 0 %}
                                     <input type="submit" value="Out of stock" disabled>
                                     {% else %}
                                     <input type="submit" value="Add to Cart">
