--- a/src/templates/craft/favourites.html
+++ b/src/templates/craft/favourites.html
@@ -3,6 +3,10 @@
 {% block content %}
 <section class="section">
     <div class="container">
+        <div class="buttons">
+             <a href="{% url 'craft:get_products' %}" class="button is-link is-light">Back to Product List</a>
+             <a href="{% url 'craft:sale' %}" class="button is-link is-light">Back to Sale</a>
+        </div>
         <h1 class="title">My Favourites</h1>
         <table class="table is-striped">
             <thead>
